--- a/add-recipe-popup/add-recipe-popup-style.css
+++ b/add-recipe-popup/add-recipe-popup-style.css
@@ -291,6 +291,13 @@
     grid-column: span 3;
   }
 
+  #add-recipe-form-touch-spacer {
+    display: none;
+
+    width: 100%;
+    height: 300px;
+  }
+
   #add-recipe-submit {
     width: 40%;
   }
