--- a/add-recipe-popup/add-recipe-popup-style.css
+++ b/add-recipe-popup/add-recipe-popup-style.css
@@ -9,7 +9,7 @@
   right: 0;
 
   width: 600px;
-  min-height: 400px;
+  min-height: 340px;
   padding: 0;
   margin: auto;
 
@@ -29,8 +29,22 @@
   opacity: 1 !important;
 }
 
-#add-recipe-form > h2 {
-  margin-top: 20px;
+#add-recipe-bar-top {
+  display: flex;
+  align-items: center;
+
+  width: 100%;
+  height: 80px;
+
+  border-bottom: 1px solid rgb(76, 211, 182);
+}
+
+#add-recipe-form > div > h2 {
+  position: absolute;
+  left: 0;
+  right: 0;
+
+  margin: auto;
 
   font-family: "Roboto Slab", serif;
   font-size: 27px;
@@ -39,7 +53,6 @@
 #add-recipe-close-icon {
   z-index: 30;
   position: absolute;
-  top: 27px;
   right: 19px;
 
   width: 27px;
@@ -71,9 +84,6 @@
 
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-
-  border-top: 1px solid rgb(76, 211, 182);
-  border-bottom: 1px solid rgb(76, 211, 182);
 }
 
 #add-recipe-form > div > label {
@@ -168,15 +178,28 @@
   grid-column: span 1;
 }
 
+#add-recipe-bar-bottom {
+  display: flex;
+  align-items: center;
+
+  position: absolute;
+  top: auto;
+  bottom: 0;
+
+  width: 100%;
+  height: 80px;
+
+  border-top: 1px solid rgb(76, 211, 182);
+}
+
 #add-recipe-submit {
   position: absolute;
-  bottom: 0;
   left: 0;
   right: 0;
 
   width: 180px;
   height: 40px;
-  margin: 20px auto;
+  margin: auto;
 
   text-align: center;
   font-family: "Roboto", sans-serif;
