--- a/add-recipe-popup/add-recipe-popup-style.css
+++ b/add-recipe-popup/add-recipe-popup-style.css
@@ -124,7 +124,11 @@
 
 #add-recipe-form > div > fieldset > input {
   width: 100%;
-  padding: 0 20px;
+  //padding: 0 20px;
+
+  padding-left: 20px;
+  padding-right: 30px;
+
   padding-top: 10px;
   padding-bottom: 5px;
 
@@ -137,6 +141,10 @@
   outline: none;
 
   cursor: text;
+
+  background-size: 20px auto;
+  background-repeat: no-repeat;
+  background-position: right 5px center;
 }
 
 #add-recipe-form > div > fieldset > input::placeholder {
