--- a/add-recipe-popup/add-recipe-popup-style.css
+++ b/add-recipe-popup/add-recipe-popup-style.css
@@ -168,6 +168,7 @@
 
   font-family: "Roboto", sans-serif;
   font-size: 16px;
+  font-weight: 300;
   color: white;
 
   background-color: black;
@@ -182,6 +183,7 @@
 }
 
 #add-recipe-form > div > fieldset > input::placeholder {
+  font-weight: 300;
   color: rgba(255, 255, 255, 0.5);
 }
 
@@ -246,6 +248,7 @@
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
+  font-weight: 300;
   color: white;
 
   border: 1px solid rgb(36, 38, 40);
