--- a/new-recipe-finder-screen/NRFS-style.css
+++ b/new-recipe-finder-screen/NRFS-style.css
@@ -106,11 +106,10 @@
   outline: none;
 
   cursor: pointer;
+
+  transition: opacity 300ms ease-in-out;
 }
 
-#new-recipe-search-button:active {
-  box-shadow: inset 0 0 40px DarkSlateGray;
-}
 
 
 
