--- a/main-style.css
+++ b/main-style.css
@@ -42,8 +42,30 @@ ul {
   opacity: 1.0 !important;
 }
 
+.button-theme {
+  height: 40px;
+  margin: auto;
+
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+
+  color: white;
+
+  border-radius: 10px;
+  background-color: rgb(47, 106, 93);
+  outline: none;
+
+  cursor: pointer;
+
+  transition: background-color 300ms ease-in-out;
+}
+
 .button-active {
-  opacity: 0.8 !important;
+  background-color: #2c5c52 !important;
+}
+
+.button-pressed {
+  box-shadow: inset 0 0 10px rgb(36, 38, 40);
 }
 
 #ios-status-bar-background {
