--- a/add-recipe-popup/add-recipe-popup-style.css
+++ b/add-recipe-popup/add-recipe-popup-style.css
@@ -271,8 +271,9 @@
 
 #add-recipe-tile-header {
   position: absolute;
+  top: -31px;
 
-  margin-top: -93px;
+  /* margin-top: -93px; */
 
   text-align: center;
   font-family: "Roboto Slab", serif;
